# ml-recipes-py

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/notebooks/: 03_logistic_regression_binary_classification.ipynb
src/ml_recipes/: __init__.py
src/ml_recipes/models/: linear_regression_scratch.py
src/ml_recipes_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_linear_regression_scratch.py
