[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-recipes-py"
version = "0.1.0"
description = "Curated, well-documented machine learning recipes and examples in Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "cutewizzy11" }
]
keywords = ["machine-learning", "ml", "education", "examples", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.0.0",
  "matplotlib>=3.8.0",
  "scikit-learn>=1.4.0",
  "jupyter>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=24.0.0",
  "ruff>=0.5.0",
]

[project.urls]
"Homepage" = "https://github.com/cutewizzy11/ml-recipes-py"
"Issues" = "https://github.com/cutewizzy11/ml-recipes-py/issues"
